added common code - home,login,config

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,3 +1,30 @@
 browser=chrome
 base.url=https://dsportalapp.herokuapp.com
 page.load.timeout=30
+webdriver.wait.timeout=3
+
+login.url=https://dsportalapp.herokuapp.com/login
+home.url=https://dsportalapp.herokuapp.com/home
+
+graph.home.url=https://dsportalapp.herokuapp.com/graph/
+graph.url= https://dsportalapp.herokuapp.com/graph/graph/
+graph.representations.url=https://dsportalapp.herokuapp.com/graph/graph-representations/
+graph.practice.url=https://dsportalapp.herokuapp.com/graph/practice
+
+tree.url=https://dsportalapp.herokuapp.com/tree/
+tree.overview.of.trees.url=https://dsportalapp.herokuapp.com/tree/overview-of-trees/
+tree.terminologies.url=https://dsportalapp.herokuapp.com/tree/terminologies/
+tree.types.of.trees=https://dsportalapp.herokuapp.com/tree/types-of-trees/
+tree.tree.traversals=https://dsportalapp.herokuapp.com/tree/tree-traversals/
+tree.traversals.illustrations= https://dsportalapp.herokuapp.com/tree/traversals-illustration/
+tree.binary.trees=https://dsportalapp.herokuapp.com/tree/binary-trees/
+tree.types.of.binary.trees=https://dsportalapp.herokuapp.com/tree/types-of-binary-trees/
+tree.implementation.in.python=https://dsportalapp.herokuapp.com/tree/implementation-in-python/
+tree.binary.tree.traversals=https://dsportalapp.herokuapp.com/tree/binary-tree-traversals/
+tree.implementation.of.binary.trees=https://dsportalapp.herokuapp.com/tree/implementation-of-binary-trees/
+tree.applications.of.binary.trees=https://dsportalapp.herokuapp.com/tree/applications-of-binary-trees/
+tree.binary.search.trees=https://dsportalapp.herokuapp.com/tree/binary-search-trees/
+tree.implementation.of.bst=https://dsportalapp.herokuapp.com/tree/implementation-of-bst/
+tree.practice=https://dsportalapp.herokuapp.com/tree/practice
+
+try.editor.url=https://dsportalapp.herokuapp.com/tryEditor
