--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -28,3 +28,25 @@ tree.implementation.of.bst=https://dsportalapp.herokuapp.com/tree/implementation
 tree.practice=https://dsportalapp.herokuapp.com/tree/practice
 
 try.editor.url=https://dsportalapp.herokuapp.com/tryEditor
+
+
+array.url=https://dsportalapp.herokuapp.com/array/
+array.arrays.in.python.url=https://dsportalapp.herokuapp.com/array/arrays-in-python/
+array.arrays.using.list.url=https://dsportalapp.herokuapp.com/array/arrays-using-list/
+array.basic.operations.in.list.url=https://dsportalapp.herokuapp.com/array/basic-operations-in-lists/
+array.applications.of.array.url=https://dsportalapp.herokuapp.com/array/applications-of-array/
+array.practice.url=https://dsportalapp.herokuapp.com/array/practice
+array.search.the.array.url=https://dsportalapp.herokuapp.com/question/1
+array.max.consecutive.ones.url=https://dsportalapp.herokuapp.com/question/2
+array.find.numbers.with.even.number.of.digits.url=https://dsportalapp.herokuapp.com/question/3
+array.squares.of.a.sorted.array.url=https://dsportalapp.herokuapp.com/question/4
+
+linkedlist.url=https://dsportalapp.herokuapp.com/linked-list/
+linkedlist.introduction.url=https://dsportalapp.herokuapp.com/linked-list/introduction/
+linkedlist.creating.linked.list.url=https://dsportalapp.herokuapp.com/linked-list/creating-linked-list/
+linkedlist.types.of.linked.list.url=https://dsportalapp.herokuapp.com/linked-list/types-of-linked-list/
+linkedlist.implement.linked.list.in.python=https://dsportalapp.herokuapp.com/linked-list/implement-linked-list-in-python/
+linkedlist.traversal.url=https://dsportalapp.herokuapp.com/linked-list/traversal/
+linkedlist.insertion.url=https://dsportalapp.herokuapp.com/linked-list/insertion-in-linked-list/
+linkedlist.deletion.url=https://dsportalapp.herokuapp.com/linked-list/deletion-in-linked-list/
+linkedlist.practice.questions.url=https://dsportalapp.herokuapp.com/linked-list/practice
