Adding config for stack and queue

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -50,3 +50,6 @@ linkedlist.traversal.url=https://dsportalapp.herokuapp.com/linked-list/traversal
 linkedlist.insertion.url=https://dsportalapp.herokuapp.com/linked-list/insertion-in-linked-list/
 linkedlist.deletion.url=https://dsportalapp.herokuapp.com/linked-list/deletion-in-linked-list/
 linkedlist.practice.questions.url=https://dsportalapp.herokuapp.com/linked-list/practice
+
+stack.url=https://dsportalapp.herokuapp.com/stack/
+queue.url=https://dsportalapp.herokuapp.com/queue/
