Added functionality for Try Editor

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -53,3 +53,5 @@ linkedlist.practice.questions.url=https://dsportalapp.herokuapp.com/linked-list/
 
 stack.url=https://dsportalapp.herokuapp.com/stack/
 queue.url=https://dsportalapp.herokuapp.com/queue/
+
+excel.file.path=src/test/resources/ExcelData/ExcelFile.xlsx
