--- a/.project
+++ b/.project
@@ -31,4 +31,11 @@
 		<nature>org.eclipse.jdt.core.javanature</nature>
 		<nature>org.eclipse.m2e.core.maven2Nature</nature>
 	</natures>
+	<linkedResources>
+		<link>
+			<name>src/test/resources/ExcelData/ExcelFile.xlsx</name>
+			<type>1</type>
+			<location>C:/Users/srivi/Downloads/ExcelFile.xlsx</location>
+		</link>
+	</linkedResources>
 </projectDescription>
