--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -55,3 +55,7 @@ stack.url=https://dsportalapp.herokuapp.com/stack/
 queue.url=https://dsportalapp.herokuapp.com/queue/
 
 excel.file.path=src/test/resources/ExcelData/ExcelFile.xlsx
+
+data.structures.introduction.url=https://dsportalapp.herokuapp.com/data-structures-introduction/
+data.structures.time.complexity.url=https://dsportalapp.herokuapp.com/data-structures-introduction/time-complexity/
+data.structures.practice.url=https://dsportalapp.herokuapp.com/data-structures-introduction/practice
