homepage feature file

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -5,7 +5,8 @@ webdriver.wait.timeout=3
 
 login.url=https://dsportalapp.herokuapp.com/login
 home.url=https://dsportalapp.herokuapp.com/home
-
+register.url=https://dsportalapp.herokuapp.com/register
+	
 graph.home.url=https://dsportalapp.herokuapp.com/graph/
 graph.url= https://dsportalapp.herokuapp.com/graph/graph/
 graph.representations.url=https://dsportalapp.herokuapp.com/graph/graph-representations/
