implemented code for linked list module.

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -41,11 +41,11 @@ array.max.consecutive.ones.url=https://dsportalapp.herokuapp.com/question/2
 array.find.numbers.with.even.number.of.digits.url=https://dsportalapp.herokuapp.com/question/3
 array.squares.of.a.sorted.array.url=https://dsportalapp.herokuapp.com/question/4
 
-linkedlist.url=https://dsportalapp.herokuapp.com/linked-list/
+linkedlist.linked.list.url=https://dsportalapp.herokuapp.com/linked-list/
 linkedlist.introduction.url=https://dsportalapp.herokuapp.com/linked-list/introduction/
 linkedlist.creating.linked.list.url=https://dsportalapp.herokuapp.com/linked-list/creating-linked-list/
 linkedlist.types.of.linked.list.url=https://dsportalapp.herokuapp.com/linked-list/types-of-linked-list/
-linkedlist.implement.linked.list.in.python=https://dsportalapp.herokuapp.com/linked-list/implement-linked-list-in-python/
+linkedlist.implement.linked.list.in.python.url=https://dsportalapp.herokuapp.com/linked-list/implement-linked-list-in-python/
 linkedlist.traversal.url=https://dsportalapp.herokuapp.com/linked-list/traversal/
 linkedlist.insertion.url=https://dsportalapp.herokuapp.com/linked-list/insertion-in-linked-list/
 linkedlist.deletion.url=https://dsportalapp.herokuapp.com/linked-list/deletion-in-linked-list/
