--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,22 @@
 					</compilerArgs>
 				</configuration>
 			</plugin>
+
+			<plugin>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>3.0.0-M5</version>
+				<configuration>
+					<properties>
+						<dataproviderthreadcount>3</dataproviderthreadcount>
+						<parallel>all</parallel>
+						<threadcount>3</threadcount>
+					</properties>
+					<suiteXmlFiles>
+						<suiteXmlFile>testng.xml</suiteXmlFile>
+					</suiteXmlFiles>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
@@ -146,5 +162,6 @@
 			<artifactId>cucumber-picocontainer</artifactId>
 			<version>7.18.0</version>
 		</dependency>
+
 	</dependencies>
 </project>
