--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,19 @@
 				</configuration>
 			</plugin>
 
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-clean-plugin</artifactId>
+				<version>3.1.0</version>
+				<configuration>
+					<filesets>
+						<fileset>
+							<directory>allure-results</directory>
+						</fileset>
+					</filesets>
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
@@ -162,6 +175,7 @@
 			<artifactId>cucumber-picocontainer</artifactId>
 			<version>7.18.0</version>
 		</dependency>
+
 
 	</dependencies>
 </project>
