1. Added logging for all steps 2.headless property is read from config instead of hardcoding

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -1,7 +1,7 @@
 browser=chrome
 base.url=https://dsportalapp.herokuapp.com
 page.load.timeout=30
-webdriver.wait.timeout=5
+webdriver.wait.timeout=10
 
 login.url=https://dsportalapp.herokuapp.com/login
 home.url=https://dsportalapp.herokuapp.com/home
@@ -60,3 +60,7 @@ excel.file.path=src/test/resources/ExcelData/ExcelFile.xlsx
 data.structures.introduction.url=https://dsportalapp.herokuapp.com/data-structures-introduction/
 data.structures.time.complexity.url=https://dsportalapp.herokuapp.com/data-structures-introduction/time-complexity/
 data.structures.practice.url=https://dsportalapp.herokuapp.com/data-structures-introduction/practice
+
+browser.chrome.headless=true
+browser.firefox.headless=true
+browser.edge.headless=true
