code for stack step def

--- a/src/test/resources/config/config.properties
+++ b/src/test/resources/config/config.properties
@@ -53,7 +53,17 @@ linkedlist.deletion.url=https://dsportalapp.herokuapp.com/linked-list/deletion-i
 linkedlist.practice.questions.url=https://dsportalapp.herokuapp.com/linked-list/practice
 
 stack.url=https://dsportalapp.herokuapp.com/stack/
+stack.operations.in.stack.url=https://dsportalapp.herokuapp.com/stack/operations-in-stack/
+stack.implementation.url=https://dsportalapp.herokuapp.com/stack/implementation/
+stack.applications.url=https://dsportalapp.herokuapp.com/stack/stack-applications/
+stack.practice.url=https://dsportalapp.herokuapp.com/stack/practice
+
 queue.url=https://dsportalapp.herokuapp.com/queue/
+queue.implementation.of.queue.in.python.url=https://dsportalapp.herokuapp.com/queue/implementation-lists/
+queue.implementation.using.collections.deque.url=https://dsportalapp.herokuapp.com/queue/implementation-collections/
+queue.implementation.using.array.url=https://dsportalapp.herokuapp.com/queue/Implementation-array/
+queue.queue.operations.url=https://dsportalapp.herokuapp.com/queue/QueueOp/
+queue.practice.url=https://dsportalapp.herokuapp.com/queue/practice
 
 excel.file.path=src/test/resources/ExcelData/ExcelFile.xlsx
 
